[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-twitch-spawn"
version = "0.1.0"
description = "A plugin for streamers!! Handles live events and such"
authors = [
    { email = "nikolekrescendo@protonmail.com", name = "niko-at-chalupa" },
]
dependencies = [
    "endstone",
]

[project.entry-points."endstone"]
twitch-spawn = "endstone_twitch_spawn:TwitchSpawnPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_twitch_spawn"]